# PsychophysicsCplusplus

./: Application.cpp  Application.h  CMakeLists.txt  Dot.cpp  Dot.h  Experiment.cpp  Experiment.h  README.md  dotField.cpp  dotField.h  main.cpp  responseScreen.cpp  responseScreen.h
include/: Application.h  Dot.h  DotField.h  DotFieldParams.h  Experiment.h  ExperimentParams.h  Menu.h  ResponseScreen.h  responseScreen.h
src/: Application.cpp  Dot.cpp  Dot.h  DotField.cpp  DotFieldParams.h  Experiment.cpp  Experiment.h  Menu.cpp  ResponseScreen.cpp  dotField.cpp  dotField.h  responseScreen.cpp
src/rlimgui/: rlImGui.cpp  rlImGui.h
